--- a/server/package.json
+++ b/server/package.json
@@ -9,18 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-<<<<<<< HEAD
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "sqlite3": "^5.1.6"
-=======
-    "express": "^4.18.2",
-    "nodemon": "^3.0.1"
->>>>>>> ConfigureCounters-backend
   }
 }
